@@ -12,3 +12,4 @@
 12|MULTIPOLYGON(((100 100,100 130,130 130,130 100,100 100)))
 13|
 14|POLYGON((0 0,10 0,10 10,0 0))
+15|POLYGON((0 0,10 0,10.5 10.5,0 10,0 0))|BOX(0 0,10.5 10.5)
